[package]
name = "blog_os"
version = "0.1.0"
authors = ["miquanyiu <1135477643@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# 使用`cargo build`编译时需要的配置
[profile.dev]
panic = "abort" # 禁用panic时栈展开


# 使用`cargo build --release`编译时需要的配置
[profile.release]
panic = "abort" # 禁用panic时栈展开

[dependencies]
bootloader = { version = "0.9.11", features = ["map_physical_memory"] }
volatile = "0.2.3"
spin = "0.4.9"
rlibc = "1.0.0"
x86_64 = "0.12.3"
pic8259_simple = "0.2.0"
uart_16550 = "0.2.10"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.8.10"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
build-command = ["build"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]